--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-fastapi
-uvicorn
-gunicorn
-pydantic
-python-dotenv
-openai
-redis
-edge-tts
-langdetect
-langchain-text-splitters
-pymongo
-dnspython
-numpy
-semantic-router==0.0.20
+fastapi==0.122.0
+uvicorn==0.38.0
+pydantic==2.12.5
+python-dotenv==1.2.1
+openai==2.15.0
+redis==7.1.0
+edge-tts==7.2.7
+langdetect==1.0.9
+langchain-text-splitters==1.1.0
+pymongo==4.15.5
+dnspython==2.8.0
+numpy==1.26.4
+semantic-router==0.0.65
+httpx==0.28.1
