--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,30 @@
-fastapi==0.122.0
-uvicorn==0.38.0
-pydantic==2.12.5
-python-dotenv==1.2.1
-openai==2.15.0
-redis==7.1.0
-edge-tts==7.2.7
-langdetect==1.0.9
-langchain-text-splitters==1.1.0
-pymongo==4.15.5
-dnspython==2.8.0
-numpy==1.26.4
+# --- Core Web Framework ---
+fastapi==0.111.0
+uvicorn==0.30.1
+pydantic==2.7.4
+httpx==0.27.0
+python-dotenv==1.0.1
+
+# --- Database ---
+pymongo==4.7.2
+dnspython==2.6.1
+redis==5.0.4
+
+# --- AI & ML Core ---
+# NumPy 1.x is safer for current ecosystem compatibility
+numpy==1.26.4 
+
+# OpenAI locked <2.0.0 due to semantic-router 0.0.65 requirements
+openai==1.35.3
+
+# Semantic Router (Requires openai<2.0.0)
 semantic-router==0.0.65
-httpx==0.28.1
+
+# Sentence Transformers
+# Using 3.x to ensure compatibility with modern huggingface-hub
+sentence-transformers==3.0.1
+
+# --- Utilities ---
+edge-tts==6.1.12
+langdetect==1.0.9
+langchain-text-splitters==0.2.1
