--- a/Docker/Production/Dockerfile
+++ b/Docker/Production/Dockerfile
@@ -5,9 +5,6 @@ FROM python:3.10-slim
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1
 
-# Setup user for Hugging Face Spaces (ID 1000)
-RUN useradd -m -u 1000 user
-
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
     ffmpeg \
@@ -15,20 +12,13 @@ RUN apt-get update && apt-get install -y \
 
 WORKDIR /app
 
-# Install dependencies (as root but cached)
+# Install dependencies with BuildKit cache mount
 COPY requirements.txt .
 RUN --mount=type=cache,target=/root/.cache/pip \
     pip install -r requirements.txt
 
-# Switch to non-root user
-USER user
-ENV PATH="/home/user/.local/bin:$PATH"
+# Copy source code (Optimized layer caching)
+COPY . .
 
-# Copy source code
-COPY --chown=user . .
-
-# Hugging Face Spaces expects port 7860
-EXPOSE 7860
-
-# Run Application
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "7860"]
+# Production Command
+CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "4"]
