--- a/Docker/Dev/Dockerfile
+++ b/Docker/Dev/Dockerfile
@@ -5,30 +5,18 @@ FROM python:3.10-slim
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1
 
-# Setup user for Hugging Face Spaces (ID 1000)
-RUN useradd -m -u 1000 user
-
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
     ffmpeg \
+    git \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
-# Install dependencies (as root but cached)
+# Install dependencies with BuildKit cache mount for faster rebuilds
 COPY requirements.txt .
 RUN --mount=type=cache,target=/root/.cache/pip \
     pip install -r requirements.txt
 
-# Switch to non-root user
-USER user
-ENV PATH="/home/user/.local/bin:$PATH"
-
-# Copy source code
-COPY --chown=user . .
-
-# Hugging Face Spaces expects port 7860
-EXPOSE 7860
-
-# Run Application
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "7860"]
+# Development Command (Hot Reload)
+CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
